# crystal

./: README.md
assets/prompts/: extract_fields.md  generate_truth.md
crystal/: Dockerfile.local  main.py  pyproject.toml
crystal-ai/: .env  .gitignore  Dockerfile.local  main.py  pyproject.toml
crystal-ai/crystal/: README.md  __init__.py  data.py  train.py
crystal-ai/crystal/_common/: data.py  train.py
crystal-ai/crystal/chatbot/: data.py  eval.py  model.py  train.py
crystal-ai/crystal/chatbot/prompts/: standard.md
crystal-ai/crystal/extraction/: data.py  eval.py  model.py  train.py
crystal-ai/crystal/extraction/prompts/: extract.md  extract_truth.md
crystal-ai/crystal/haiku/: data.py  eval.py  train.py
crystal-ai/crystal/prompts/: write_haiku.md
crystal-ai/crystal/summarization/: data.py  train.py
crystal-ai/crystal_summarization/: data.py  eval.py  model.py  train.py
crystal-ai/crystal_summarization/prompts/: conversational.md  standard.md
crystal/crystal/: data.py
crystal_ai/: .gitignore  Dockerfile.local  main.py  pyproject.toml  truth.py
crystal_ai/crystal_summarization/: data.py  train.py
crystal_ai/crystal_summarization/prompts/: standard.md
crystal_ai/crystal_truth/: __init__.py  data.py
deployment-local/: compose.yaml  local.env
deployment-remote/: install.sh  install_llamacpp.sh  install_tools.sh  remote.env
llamacpp-init/: download_model.sh
llamacpp_init/: Dockerfile.local  download_model.sh
