[project]
name = "crystal-ai"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "feedparser>=6.0.11",
    "nltk>=3.9.1",
    "pykakasi>=2.3.0",
    "pylcs>=0.1.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "unsloth>=2025.8.1",
    "vllm==0.8.2",
]
